--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,25 +1,28 @@
-FROM nvidia/cuda:8.0-cudnn5-devel-ubuntu14.04
+FROM nvidia/cuda:9.0-devel-ubuntu16.04
+MAINTAINER Harijaona Ravelondrina <hravelondrina@smartpredict.io>
 
-MAINTAINER Sai Soundararaj <saip@outlook.com>
+# Export the CUDA evironment variables manually
+ENV LD_LIBRARY_PATH=/usr/local/cuda-9.0:$LD_LIBRARY_PATH
 
-ARG THEANO_VERSION=rel-0.8.2
-ARG TENSORFLOW_VERSION=0.12.1
+ARG TENSORFLOW_VERSION=1.10
 ARG TENSORFLOW_ARCH=gpu
-ARG KERAS_VERSION=1.2.0
-ARG LASAGNE_VERSION=v0.1
 ARG TORCH_VERSION=latest
 ARG CAFFE_VERSION=master
-
-#RUN echo -e "\n**********************\nNVIDIA Driver Version\n**********************\n" && \
-#	cat /proc/driver/nvidia/version && \
-#	echo -e "\n**********************\nCUDA Version\n**********************\n" && \
-#	nvcc -V && \
-#	echo -e "\n\nBuilding your Deep Learning Docker Image...\n"
+ARG KERAS_VERSION=2.2.4
 
 # Install some dependencies
 RUN apt-get update && apt-get install -y \
-		bc \
 		build-essential \
+		checkinstall \
+		libreadline-gplv2-dev \
+		libncursesw5-dev \
+		libsqlite3-dev \
+		tk-dev \
+		libgdbm-dev \
+		libc6-dev \
+		libbz2-dev\
+		wget \
+		bc \
 		cmake \
 		curl \
 		g++ \
@@ -44,7 +47,6 @@ RUN apt-get update && apt-get install -y \
 		software-properties-common \
 		unzip \
 		vim \
-		wget \
 		zlib1g-dev \
 		qt5-default \
 		libvtk6-dev \
@@ -87,40 +89,79 @@ RUN apt-get update && apt-get install -y \
 # Link BLAS library to use OpenBLAS using the alternatives mechanism (https://www.scipy.org/scipylib/building/linux.html#debian-ubuntu)
 	update-alternatives --set libblas.so.3 /usr/lib/openblas-base/libblas.so.3
 
+
+# Build and Install python3.6
+RUN wget https://www.python.org/ftp/python/3.6.5/Python-3.6.5.tar.xz
+	tar -xvf Python-3.6.5.tar.xz
+	cd Python-3.6.5/
+	./configure --enable-shared \
+		--prefix=/usr \
+		--enable-ipv6 \
+		--enable-loadable-sqlite-extensions \
+		--with-dbmliborder=bdb:gdbm \
+		--with-computed-gotos \
+		--without-ensurepip \
+		--with-system-expat \
+		--with-system-libmpdec \
+		--with-system-ffi \
+		--with-fpectl \
+		--enable-optimizations
+	make altinstall
+	cd ..
+	rm -rf Python-3.6.5/
+
+
+ENV CUDNN_VERSION 7.3.1.20
+LABEL com.nvidia.cudnn.version="${CUDNN_VERSION}"
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+            libcudnn7=$CUDNN_VERSION-1+cuda9.0 \
+            libcudnn7-dev=$CUDNN_VERSION-1+cuda9.0 && \
+    apt-mark hold libcudnn7 && \
+    rm -rf /var/lib/apt/lists/*
+
+#RUN echo -e "\n**********************\nNVIDIA Driver Version\n**********************\n" && \
+#	cat /proc/driver/nvidia/version && \
+#	echo -e "\n**********************\nCUDA Version\n**********************\n" && \
+#	nvcc -V && \
+#	echo -e "\n\nBuilding your Deep Learning Docker Image...\n"
+
+
 # Install pip
 RUN curl -O https://bootstrap.pypa.io/get-pip.py && \
-	python get-pip.py && \
+	python3.6 get-pip.py && \
 	rm get-pip.py
 
 # Add SNI support to Python
-RUN pip --no-cache-dir install \
+RUN pip3.6 --no-cache-dir install \
 		pyopenssl \
 		ndg-httpsclient \
 		pyasn1
 
 # Install useful Python packages using apt-get to avoid version incompatibilities with Tensorflow binary
 # especially numpy, scipy, skimage and sklearn (see https://github.com/tensorflow/tensorflow/issues/2034)
-RUN apt-get update && apt-get install -y \
-		python-numpy \
-		python-scipy \
-		python-nose \
-		python-h5py \
-		python-skimage \
-		python-matplotlib \
-		python-pandas \
-		python-sklearn \
-		python-sympy \
-		&& \
-	apt-get clean && \
-	apt-get autoremove && \
-	rm -rf /var/lib/apt/lists/*
+RUN pip3.6 --no-cache-dir install \
+		numpy \
+		scipy \
+		nose \
+		h5py \
+		skimage \
+		matplotlib \
+		seaborn \
+		plotly \
+		pandas \
+		sklearn \
+		sympy \
+		tqdm \
+		requests \
 
 # Install other useful Python packages using pip
-RUN pip --no-cache-dir install --upgrade ipython && \
-	pip --no-cache-dir install \
+RUN pip3.6 --no-cache-dir install --upgrade ipython && \
+	pip3.6 --no-cache-dir install \
 		Cython \
 		ipykernel \
 		jupyter \
+		jupyterlab \
 		path.py \
 		Pillow \
 		pygments \
@@ -129,11 +170,11 @@ RUN pip --no-cache-dir install --upgrade ipython && \
 		wheel \
 		zmq \
 		&& \
-	python -m ipykernel.kernelspec
+	python3.6 -m ipykernel.kernelspec
 
 
 # Install TensorFlow
-RUN pip --no-cache-dir install \
+RUN pip3.6 --no-cache-dir install \
 	https://storage.googleapis.com/tensorflow/linux/${TENSORFLOW_ARCH}/tensorflow_${TENSORFLOW_ARCH}-${TENSORFLOW_VERSION}-cp27-none-linux_x86_64.whl
 
 
@@ -154,42 +195,12 @@ RUN apt-get update && apt-get install -y \
 	apt-get autoremove && \
 	rm -rf /var/lib/apt/lists/*
 
-# Install Caffe
-RUN git clone -b ${CAFFE_VERSION} --depth 1 https://github.com/BVLC/caffe.git /root/caffe && \
-	cd /root/caffe && \
-	cat python/requirements.txt | xargs -n1 pip install && \
-	mkdir build && cd build && \
-	cmake -DUSE_CUDNN=1 -DBLAS=Open .. && \
-	make -j"$(nproc)" all && \
-	make install
-
-# Set up Caffe environment variables
-ENV CAFFE_ROOT=/root/caffe
-ENV PYCAFFE_ROOT=$CAFFE_ROOT/python
-ENV PYTHONPATH=$PYCAFFE_ROOT:$PYTHONPATH \
-	PATH=$CAFFE_ROOT/build/tools:$PYCAFFE_ROOT:$PATH
-
-RUN echo "$CAFFE_ROOT/build/lib" >> /etc/ld.so.conf.d/caffe.conf && ldconfig
-
-
-# Install Theano and set up Theano config (.theanorc) for CUDA and OpenBLAS
-RUN pip --no-cache-dir install git+git://github.com/Theano/Theano.git@${THEANO_VERSION} && \
-	\
-	echo "[global]\ndevice=gpu\nfloatX=float32\noptimizer_including=cudnn\nmode=FAST_RUN \
-		\n[lib]\ncnmem=0.95 \
-		\n[nvcc]\nfastmath=True \
-		\n[blas]\nldflag = -L/usr/lib/openblas-base -lopenblas \
-		\n[DebugMode]\ncheck_finite=1" \
-	> /root/.theanorc
-
-
 # Install Keras
-RUN pip --no-cache-dir install git+git://github.com/fchollet/keras.git@${KERAS_VERSION}
+RUN pip3.6 --no-cache-dir install git+git://github.com/fchollet/keras.git@${KERAS_VERSION}
 
 
-# Install Lasagne
-RUN pip --no-cache-dir install git+git://github.com/Lasagne/Lasagne.git@${LASAGNE_VERSION}
-
+# Export the CUDA evironment variables manually
+ENV TORCH_NVCC_FLAGS="-D__CUDA_NO_HALF_OPERATORS__"
 
 # Install Torch
 RUN git clone https://github.com/torch/distro.git /root/torch --recursive && \
